[tool.poetry]
name = "consul-reg"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "consul_reg"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.14.0"
loguru = "^0.7.2"
requests = "^2.31.0"
twocaptcha = "^0.0.1"
2captcha-python = "^1.2.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
